--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Handjet:wght@100..900&display=swap');
 
 
@@ -51,7 +50,7 @@ line-height: 17px;
 letter-spacing: 0%;
 text-align: center;
 }
-#development .intro{
+#development .intro ,#video{
     margin:50px 160px 0px 160px;
     border-radius: 16px;
 background: rgba(13, 19, 33, 0.02);
@@ -94,4 +93,22 @@ background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 
 
 .num-2, .num-3{
     margin-top: 30px
+}
+
+.video-content {
+  text-align: center;
+}
+
+.video-content .title{
+    display: block;
+    margin: 30px auto 0 auto;
+    padding-top: 14px
+}
+.video-content .subtitle {
+  display: block;
+  margin: 0 20px;
+  padding: 10px;
+}
+.video-content video{
+    margin-top: 20px;
 }
