--- a/style.css
+++ b/style.css
@@ -112,3 +112,7 @@ background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 
 .video-content video{
     margin-top: 20px;
 }
+
+.video-content iframe {
+  border-radius: 15px;
+}
