--- a/style.css
+++ b/style.css
@@ -265,5 +265,34 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #0056b3;
 }
+.site-footer {
+    width: 100%;
+    height: 100px;
+    border-radius: 16px;
+    background: rgba(34, 34, 35, 0.084);
+}
+.footer-content{
+    display: flex;
+     justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.footer-text{
+    font-family: Azeret Mono;
+    font-size: 14px;
+    font-weight: 600;
+    color: rgb(13, 19, 33);
+    margin: 30px 100px;
+    }
+
+    .footer-social{
+        margin-right: 100px;
+
+    }
+.footer-social a {
+  margin:10px 10px; /* Adjust the value as needed */
+}
+
 
 
