--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Handjet:wght@100..900&display=swap');
 
-
-
+body,html 
+{
+  margin: 0;
+  padding: 0;
+}
+html{
+  scroll-behavior: smooth;
+}
 #hero .hero-icon{
 
 height: 240px;
@@ -41,14 +47,18 @@ width: 240px;
     border: none;
     border-radius: 9px;
     color: rgb(255, 255, 255);
-
-background: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 18px;
-font-weight: 600;
-line-height: 17px;
-letter-spacing: 0%;
-text-align: center;
+    background: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 17px;
+    letter-spacing: 0%;
+    text-align: center;
+    cursor: pointer;
+}
+.btn-primary a{
+    text-decoration: none;
+    color: white;
 }
 #development .intro ,#video{
     margin:50px 160px 0px 160px;
@@ -266,9 +276,9 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 .site-footer {
-    width: 100%;
-    height: 100px;
-    border-radius: 16px;
+    /* width: 100%; */
+    /* height: 100px; */
+    border-radius: 10px;
     background: rgba(34, 34, 35, 0.084);
 }
 .footer-content{
@@ -277,21 +287,23 @@ button[type="submit"]:hover {
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
+    padding: 8px 0; /* Reduce padding to thin the footer */
+    
 }
 .footer-text{
     font-family: Azeret Mono;
     font-size: 14px;
     font-weight: 600;
     color: rgb(13, 19, 33);
-    margin: 30px 100px;
+    margin: 0 0 0 150px; /* Reduce margin to thin the footer */
     }
 
     .footer-social{
-        margin-right: 100px;
+        margin-right: 132px;
 
     }
 .footer-social a {
-  margin:10px 10px; /* Adjust the value as needed */
+  margin:10px 10px;
 }
 
 
