--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html{
   scroll-behavior: smooth;
 }
 #hero .hero-icon{
-
 height: 240px;
 width: 240px;
     background-image: url(resources/Group.png);
@@ -105,13 +104,13 @@ background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 
 .video-content, .dev-target-content{
   text-align: center;
 }
-/* .dev-target-content .title, */
+
 .video-content .title{
     display: block;
     margin: 30px auto 0 auto;
     padding-top: 17px
 }
-/* .dev-target-content .subtitle, */
+
 .video-content .subtitle {
   display: block;
   margin: 0 20px;
@@ -182,7 +181,7 @@ margin-right: 20px;
   display: inline-block;
  
   text-decoration: underline;
-  color: black; /* Set the color to black */
+  color: black;
   font-family: Azeret Mono;
   font-size: 14px;
   font-weight: 600;
@@ -222,6 +221,7 @@ margin: 30px 20px 10px 20px;
     padding: 5px;
    
 }
+/* learn more button style */
 .about-reactjs .learn-more,.about-nodejs .learn-more,.about-mongodb .learn-more{
     margin:10px 0 10px 0;
 }
@@ -276,8 +276,7 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 .site-footer {
-    /* width: 100%; */
-    /* height: 100px; */
+  
     border-radius: 10px;
     background: rgba(34, 34, 35, 0.084);
 }
