learn more button debugged

--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ html {
 }
 
 .html-des {
-  width: 332px;
+  width: 270px;
   height: 219px;
   display: flex;
   flex-direction: column;
@@ -171,7 +171,7 @@ html {
 }
 
 .css-des, .javascript-des {
-  width: 332px;
+  width:300px;
   height: 219px;
   display: flex;
   flex-direction: column;
@@ -188,6 +188,7 @@ html {
 .learn-more {
   display: inline-block;
   text-decoration: underline;
+  width: fit-content;
   color: black;
   font-family: Azeret Mono;
   font-size: 14px;
@@ -311,6 +312,5 @@ button[type="submit"]:hover {
 .footer-social a {
   margin: 10px;
 }
-
 
 
